// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`atoms/Link Default play-test 1`] = `
<a target="_self"
   data-testid="Link"
   class="sc-oeqTF cFwkOt"
   href="#"
>
  Go to page
</a>
`;

exports[`atoms/Link HoverFrame play-test 1`] = `
<a target="_self"
   data-testid="Link"
   class="sc-oeqTF cFwkOt"
   href="https://www.alasdairmacrae.co.uk"
>
  Go to page
  <div class="sc-drnuxz gQjKNO">
    <iframe src="https://www.alasdairmacrae.co.uk"
            class="sc-dENhDJ hcyAeG sc-hDcvty jDAvkM"
            allowfullscreen
            data-testid="IFrame"
    >
    </iframe>
  </div>
</a>
`;

exports[`atoms/Link Large play-test 1`] = `
<style>
  :root{
      --animation-rhythm: 1s;
      box-sizing: border-box;
      interpolate-size: allow-keywords;
  }

  @media (prefers-reduced-motion: reduce) {
    :root {
        --animation-rhythm: 0s;
    }
  }
  
  * {
    box-sizing: border-box;
  }
</style>
<div style="font-family: &quot;Inter Variable&quot;, Inter, system-ui, sans-serif;">
  <a class="undefined Link_root__zGNxh Link_Large__F0LZw "
     target="_self"
     data-testid="Link"
     href="#"
     style="--line-height: 1.3em;"
  >
    Go to page
  </a>
</div>
`;
